# H1Z1-Client-Server

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  run_schema_tool.bat
src/: OLD_endian.cpp  OLD_endian.hpp  app_memory.hpp  binary.cpp  binary.hpp  main_login.cpp  main_login.hpp  misc.cpp  misc.hpp  schema_tool.cpp  win32_login.cpp  win32_sockets.cpp  win32_sockets.hpp
src/Login-Server/: login.cpp  login.hpp
src/Login_Server/: login.cpp  login.hpp
src/Packets/LoginUdp_11/: LoginUdp_11.cpp  LoginUdp_11.hpp  LoginUdp_11.schm  login_packets.cpp  login_packets.hpp
src/SOE/: core_protocol.cpp  core_protocol.hpp  session.cpp  session.hpp  soe_protocol.cpp  soe_protocol.hpp
